Update addons card to include price and proper links to where to get the addons

--- a/assets/css/addons.css
+++ b/assets/css/addons.css
@@ -48,6 +48,6 @@
     padding: 10px;
 }
 
-.krokedil_addons__card_action .krokedil_addons__read_more {
+.krokedil_addons__read_more, .krokedil_addons__price {
     margin-top: 5px;
 }
