--- a/assets/css/addons.css
+++ b/assets/css/addons.css
@@ -7,18 +7,31 @@
 .krokedil_addons__card {
     max-width: 356px;
     display: grid;
-    grid-template-rows: 200px auto 50px;
+    gap: 0;
+    grid-template-rows: subgrid;
+    grid-row: span 3;
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 5px;
     overflow: hidden;
+    margin: 0 auto;
 }
 
 @media only screen and (min-width: 992px) {
+    .krokedil_addons__card {
+        margin: 0;
+    }
+
     .krokedil_addons__cards {
         grid-template-columns: repeat(auto-fit, minmax(256px, max-content));
     }
 }
+
+@media only screen and (max-width: 782px) {
+    .krokedil_addons__card_action {
+    }
+}
+
 
 .krokedil_addons__card_content {
     display: flex;
@@ -34,6 +47,8 @@
 
 .krokedil_addons__card_image {
     overflow: hidden;
+    aspect-ratio: 16/9;
+    max-height: 200px;
 }
 
 .krokedil_addons__card_image img, .krokedil_addons__card_image div {
@@ -43,10 +58,6 @@
     background-position: center;
     width: 100%;
     height: 100%;
-}
-
-.krokedil_settings__wrapper .krokedil_settings__sidebar {
-    margin-top: 45px;
 }
 
 .krokedil_addons__card_action {
