--- a/assets/css/settings.css
+++ b/assets/css/settings.css
@@ -20,21 +20,8 @@
     margin: 0 3px 0 5px;
 }
 
-@media only screen and (max-width: 840px) {
-    .krokedil_settings__content {
-        min-width: 750px;
-        grid-row: 1 / 3;
-    }
-}
-
-.krokedil_settings__content {
-    min-width: 356px;
-    grid-row: 1 / 3;
-}
-
 .krokedil_settings__sidebar {
-    min-width: 350px;
-    width: 100%;
+    width: 356px;
     height: min-content;
     box-sizing: border-box;
     text-align: left;
@@ -46,6 +33,30 @@
     display: flex;
     padding: 20px 20px;
     grid-row: 1;
+}
+
+@media only screen and (max-width: 840px) {
+    .krokedil_settings__sidebar {
+        margin: 0 auto;
+    }
+
+    .krokedil_settings__wrapper {
+        grid-template-columns: 1fr;
+    }
+
+    .krokedil_settings__sidebar {
+        grid-row: auto;
+    }
+
+    .krokedil_settings__content {
+        min-width: 750px;
+        grid-row: 1 / 3;
+    }
+}
+
+.krokedil_settings__content {
+    min-width: 356px;
+    grid-row: 1 / 3;
 }
 
 .krokedil_settings__sidebar .krokedil_settings__sidebar_section {
@@ -95,4 +106,17 @@
     margin: 0px;
     height: 20px;
     width: auto;
+}
+
+.krokedil_settings__header_title {
+    margin: 0;
+}
+
+.krokedil_settings__header_description {
+    margin: 5px 0 0 0;
+}
+
+.krokedil_addons__description {
+    margin-left: 20px;
+    margin-right: 20px;
 }
