--- a/assets/css/support.css
+++ b/assets/css/support.css
@@ -16,11 +16,15 @@
     font-weight: 700;
 }
 
+.krokedil_support__info {
+    max-width: 900px;
+}
+
 .krokedil_support__form label span {
     font-size: 12px;
     font-weight: 300;
 }
 
-.krokedil_support__info p:first-of-type {
-    margin-top: 0;
+.krokedil_support__info p {
+    margin: 0.5em 0;
 }
