--- a/assets/css/settings.css
+++ b/assets/css/settings.css
@@ -247,7 +247,7 @@ div.krokedil_settings__spacer {
     }
 }
 
-.krokedil_settings__section_title {
+.krokedil_settings__gateway_page.styled .krokedil_settings__section_title {
     margin-bottom: 0;
 }
 
@@ -255,4 +255,43 @@ div.krokedil_settings__spacer {
     margin-top: 7px;
     opacity: 0.8;
     font-style: italic;
+}
+
+.krokedil_settings__gateway_page.styled .krokedil_ppu_status:not(.active) {
+    opacity: 0.5;
+    pointer-events: none;
+    user-select: none;
+    outline: none;
+}
+
+.krokedil_settings__gateway_page.styled .krokedil_ppu_status:not(.active) input[type="number"] {
+    pointer-events: none;
+    user-select: none;
+    outline: none;
+    background: #f5f5f5;
+    color: #888;
+    cursor: not-allowed;
+    tab-index: -1;
+}
+
+.krokedil_settings__gateway_page.styled table.form-table textarea {
+    height: 3em;
+}
+
+.krokedil_settings__gateway_page.styled .krokedil_settings_title, .krokedil_settings__gateway_page.styled .krokedil_settings_sub_title {
+    margin-bottom: 0;
+    margin-top: 1.4em;
+}
+
+.krokedil_settings__gateway_page.styled .krokedil_settings_sub_title {
+    font-size: 1.1em;
+    margin-top: 1.5em;
+}
+
+.krokedil_settings__gateway_page.styled .krokedil_settings_sub_title + p {
+    margin-top: 0.3em;
+}
+
+.krokedil_settings__gateway_page.styled  .krokedil_ppu_setting__title.inactive + p + .form-table .titledesc {
+   padding-top: 0;
 }
