--- a/assets/css/settings.css
+++ b/assets/css/settings.css
@@ -307,7 +307,40 @@ div.krokedil_settings__spacer {
    padding-top: 0;
 }
 
-.krokedil_nav_tabs {
-    background: none;
-    padding-left: 0;
+.nav-tab-wrapper.krokedil_nav_tabs {
+    border-bottom: 1px solid #c3c4c7;
+    margin: 0;
+    padding-top: 9px;
+    padding-bottom: 0;
+    line-height: inherit;
+}
+
+.nav-tab-wrapper.krokedil_nav_tabs .nav-tab {
+    float: left;
+    border: 1px solid #c3c4c7;
+    border-bottom: none;
+    margin-left: 0.5em;
+    padding: 5px 10px;
+    font-size: 14px;
+    line-height: 1.71428571;
+    font-weight: 600;
+    background: #dcdcde;
+    color: #50575e;
+    text-decoration: none;
+    white-space: nowrap;
+}
+
+.nav-tab-wrapper.krokedil_nav_tabs .nav-tab-active, .nav-tab-wrapper.krokedil_nav_tabs .nav-tab-active:hover, .nav-tab-wrapper.krokedil_nav_tabs .nav-tab-active:focus, .nav-tab-wrapper.krokedil_nav_tabs .nav-tab-active:focus:active {
+    border-bottom: 1px solid #f0f0f1;
+    background: #f0f0f1;
+    color: #000;
+}
+
+.nav-tab-wrapper.krokedil_nav_tabs .nav-tab-active, .nav-tab-wrapper.krokedil_nav_tabs .nav-tab:focus:active {
+    box-shadow: none;
+}
+
+.nav-tab-wrapper.krokedil_nav_tabs .nav-tab-active {
+    margin-bottom: -1px;
+    color: #3c434a;
 }
