--- a/assets/css/settings.css
+++ b/assets/css/settings.css
@@ -307,15 +307,17 @@ div.krokedil_settings__spacer {
    padding-top: 0;
 }
 
-.nav-tab-wrapper.krokedil_nav_tabs {
+body.woocommerce_page_wc-settings .nav-tab-wrapper.krokedil_nav_tabs {
     border-bottom: 1px solid #c3c4c7;
     margin: 0;
     padding-top: 9px;
     padding-bottom: 0;
     line-height: inherit;
+    background: none;
+    gap: 0;
 }
 
-.nav-tab-wrapper.krokedil_nav_tabs .nav-tab {
+body.woocommerce_page_wc-settings .nav-tab-wrapper.krokedil_nav_tabs .nav-tab {
     float: left;
     border: 1px solid #c3c4c7;
     border-bottom: none;
@@ -330,17 +332,17 @@ div.krokedil_settings__spacer {
     white-space: nowrap;
 }
 
-.nav-tab-wrapper.krokedil_nav_tabs .nav-tab-active, .nav-tab-wrapper.krokedil_nav_tabs .nav-tab-active:hover, .nav-tab-wrapper.krokedil_nav_tabs .nav-tab-active:focus, .nav-tab-wrapper.krokedil_nav_tabs .nav-tab-active:focus:active {
+body.woocommerce_page_wc-settings .nav-tab-wrapper.krokedil_nav_tabs .nav-tab-active, body.woocommerce_page_wc-settings .nav-tab-wrapper.krokedil_nav_tabs .nav-tab-active:hover, body.woocommerce_page_wc-settings .nav-tab-wrapper.krokedil_nav_tabs .nav-tab-active:focus, body.woocommerce_page_wc-settings .nav-tab-wrapper.krokedil_nav_tabs .nav-tab-active:focus:active {
     border-bottom: 1px solid #f0f0f1;
     background: #f0f0f1;
     color: #000;
 }
 
-.nav-tab-wrapper.krokedil_nav_tabs .nav-tab-active, .nav-tab-wrapper.krokedil_nav_tabs .nav-tab:focus:active {
+body.woocommerce_page_wc-settings .nav-tab-wrapper.krokedil_nav_tabs .nav-tab-active, body.woocommerce_page_wc-settings .nav-tab-wrapper.krokedil_nav_tabs .nav-tab:focus:active {
     box-shadow: none;
 }
 
-.nav-tab-wrapper.krokedil_nav_tabs .nav-tab-active {
+body.woocommerce_page_wc-settings .nav-tab-wrapper.krokedil_nav_tabs .nav-tab-active {
     margin-bottom: -1px;
     color: #3c434a;
 }
